Tue Sep 14 12:40:47 PDT 1999 Manish Singh <yosh@gimp.org>

	* plug-ins/sel2path/global.h
	* plug-ins/sel2path/math.c
	* plug-ins/sel2path/vector.c: s/acosd/my_acosd/ since some platforms
	seem to have this function in the native libm

	* plug-ins/script-fu/scripts/xach-effect.scm: remove stale debugging
	line

	* app/guides_cmds.c
	* app/tools_cmds.c: changes from below

Tue Sep 14 04:02:06 CEST 1999  Marc Lehmann <pcg@goof.com>

        * tools/pdbgen/stddefs.pdb, tools/pdbgen/pdb/tools.pdb: shear and
        flip used the wrong orientationtype.

Mon Sep 13 15:29:46 PDT 1999 Manish Singh <yosh@gimp.org>

	* app/Makefile.am: -export-symbols only works with -export-dynamic,
	so add it.

	* plug-ins/gimpressionist/preview.c: dictch naughty // comment

Mon Sep 13 16:45:30 1999  ape@gandalf.spacetec.no  (Asbjorn Pettersen)

	* plug-ins/helpbrowser/helpbrowser.c (load_page): BUG in helpbrowser.
	Trying to open file like "file.html#1111" should be "file.html".
	Added g_strdelimit() to remove '#' char before file opening.
	
	g_strdelimit (new_base,"#",'\0'); 
        afile = fopen (new_base, "rt");

Mon Sep 13 12:58:56 MEST 1999  Sven Neumann <sven@gimp.org>

	* app/brush_select.c: corrected scrolling in the Brushes Dialog. 
	Fixes bug #2146.

	* plug-ins/common/curve_bend.c: applied a path from Wolfgang Hofer that
        fixes wrong parameters in PDB calls.

Mon Sep 13 01:50:29 BST 1999 Nick Lamb <njl195@zepler.org>

        * plug-ins/common/png.c: Update info structure after applying
        transformations. No longer apply sBIT. Report errors nicely.

Sun Sep 12 19:37:12 CEST 1999  Marc Lehmann <pcg@goof.com>

        * configure.in: Changes for perl i18n, some file moves, new po
        subdir.

Sat Sep 11 16:44:15 PDT 1999 Manish Singh <yosh@gimp.org>

	* app/fileops.c
	* plug-ins/common/url.c: another XachPatch (TM) to fix revert and
	urls

Sat Sep 11 22:45:12 BST 1999 Andy Thomas <alt@gimp.org>

	* app/nav_window.c
	* app/floating_sel.c
